[gd_scene load_steps=9 format=2]

[ext_resource path="res://Body/Mutation.gd" type="Script" id=1]
[ext_resource path="res://TIMESS__.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Body/Positive Mutations/mutation_Spines.png" type="Texture" id=3]
[ext_resource path="res://Body/mutation_backPositive.png" type="Texture" id=4]
[ext_resource path="res://UI/Shapes/squareglow.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 156, 100 )

[node name="Node2D" type="Node2D"]
z_index = 19
script = ExtResource( 1 )

[node name="backSprite" type="Sprite" parent="."]
position = Vector2( 1, 14 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="mutationSprite" type="Sprite" parent="."]
position = Vector2( 1, -73 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="glow" type="Node2D" parent="."]
visible = false

[node name="glowback" type="NinePatchRect" parent="glow"]
modulate = Color( 0.984314, 0.494118, 1, 0.235294 )
margin_left = -163.0
margin_top = -47.0
margin_right = 3067.0
margin_bottom = 1353.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow" type="NinePatchRect" parent="glow"]
modulate = Color( 0.984314, 0.494118, 1, 0.235294 )
margin_left = -168.0
margin_top = -114.0
margin_right = 3182.0
margin_bottom = 776.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = -148.0
margin_top = -94.0
margin_right = 145.0
margin_bottom = -49.0
custom_fonts/font = SubResource( 1 )
text = "Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="."]
margin_left = -129.0
margin_top = -43.0
margin_right = 127.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Description"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mutationButton" type="TextureButton" parent="."]
margin_left = -156.0
margin_top = -121.0
margin_right = 156.0
margin_bottom = 79.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mutationArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mutationArea"]
position = Vector2( 0, -21 )
shape = SubResource( 3 )
[connection signal="pressed" from="mutationButton" to="." method="_on_mutationButton_pressed"]
[connection signal="area_entered" from="mutationArea" to="." method="_on_mutationArea_area_entered"]
[connection signal="area_exited" from="mutationArea" to="." method="_on_mutationArea_area_exited"]
